# mud

./: CMakeLists.txt
adaptations/arduino/arduino_unique_id_generator/: library.properties
adaptations/arduino/arduino_unique_id_generator/src/: arduino_unique_id_generator.cpp  arduino_unique_id_generator.h
adaptations/arduino/mud/: library.properties
adaptations/arduino/mud_arduino_avr/: library.properties
adaptations/arduino/mud_arduino_avr/src/: mcu_board_adaptation.cpp  mcu_board_adaptation.h
adaptations/arduino/mud_as32_ttl_100/: library.properties
adaptations/arduino/mud_as32_ttl_100/src/: radio_module_adaptation.cpp  radio_module_adaptation.h
adaptations/arduino/mud_configuration/: library.properties
adaptations/arduino/mud_configuration/src/: mud_configuration.h
tacp/: CMakeLists.txt
tacp/src/: CMakeLists.txt  debug.c  protocols.h  tacp.c  tacp.h
tacp/tests/: CMakeLists.txt  tacp_test.c  things_tiny_id_test.c
thing/: CMakeLists.txt
thing/src/: CMakeLists.txt  thing.c  thing.h
thing/tests/: CMakeLists.txt  thing_test.c
tuxp/: CMakeLists.txt
tuxp/src/: CMakeLists.txt  debug.h  protocols.h  things_tiny_id.c  things_tiny_id.h  tuxp.c  tuxp.h
tuxp/tests/: CMakeLists.txt  tuxp_test.c
